--- a/Projektarbeit/Properties/Resources.resx
+++ b/Projektarbeit/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="D9DAAAEB_9E0C_433E_A4AD_3DFED8A0B0AC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\D9DAAAEB-9E0C-433E-A4AD-3DFED8A0B0AC.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="KaffeeArten" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\KaffeeArten.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="shop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
