--- a/Projektarbeit/Properties/Resources.resx
+++ b/Projektarbeit/Properties/Resources.resx
@@ -118,9 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="D9DAAAEB_9E0C_433E_A4AD_3DFED8A0B0AC" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\D9DAAAEB-9E0C-433E-A4AD-3DFED8A0B0AC.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="KaffeeArten" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\KaffeeArten.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
@@ -135,5 +132,8 @@
   </data>
   <data name="unknown3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\unknown3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="unknown4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unknown4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
