--- a/Projektarbeit/Properties/Resources.resx
+++ b/Projektarbeit/Properties/Resources.resx
@@ -130,6 +130,12 @@
   <data name="BohneSilber" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BohneSilber.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Cappuchino_Standart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Cappuchino_Standart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Espresso_Standart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Espresso_Standart.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="KaffeeArten" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\KaffeeArten.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
